@@ -232,6 +232,7 @@ game.menu.language=Language
 game.menu.leave=Leave Game
 game.menu.manual=Manual
 game.menu.save=Save Game
+game.menu.send=Send
 game.menu.showtoasts=Show Toasts
 game.menu.title=Menu
 game.note.armiesleft={0} armies left
