@@ -2,21 +2,19 @@ package net.yura.domination.mobile;
 
 import java.io.File;
 import java.io.FileInputStream;
+import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
-import java.io.ObjectOutputStream;
 import java.io.OutputStream;
 import java.net.URL;
 import java.util.Locale;
 import java.util.Observer;
 import java.util.ResourceBundle;
 import javax.microedition.io.Connector;
-import net.yura.domination.engine.Risk;
 import net.yura.domination.engine.RiskIO;
 import net.yura.domination.engine.RiskUtil;
 import net.yura.domination.engine.core.RiskGame;
 import net.yura.mobile.gui.Midlet;
-import net.yura.mobile.io.FileUtil;
 
 /**
  * @author Yura Mamyrin
@@ -43,13 +41,12 @@ public class RiskMiniIO implements RiskIO {
         Midlet.openURL("file:///android_asset/" + doc );
     }
 
-    public InputStream loadGameFile(String fileUrl) throws Exception {
-        return FileUtil.getInputStreamFromFileConnector(fileUrl);
+    public InputStream loadGameFile(String file) throws Exception {
+        return new FileInputStream(file);
     }
 
-    public void saveGameFile(String fileUrl, RiskGame obj) throws Exception {
-        OutputStream fileout = FileUtil.getWriteFileConnection(fileUrl).openOutputStream();
-        obj.saveGame(fileout);
+    public void saveGameFile(String file, RiskGame obj) throws Exception {
+        obj.saveGame(new FileOutputStream(file));
     }
 
     public OutputStream saveMapFile(String fileName) throws Exception {
